--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-fastapi
-uvicorn
-joblib
-scikit-learn
-pydantic
+fastapi>=0.95.0
+uvicorn>=0.22.0
+joblib>=1.2.0
+scikit-learn>=1.2.2
+pydantic>=1.10.7
+python-multipart>=0.0.5
+numpy>=1.24.0
